fix overflow text

--- a/src/sass/shame.scss
+++ b/src/sass/shame.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.item-toggle, .item {
+  white-space: normal;
+}
+
 .input-label {
   max-width: none;
   width: inherit;
